--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <form id="textform">
-        <img id="logo" src="/project1/logo.jpg">
+        <img id="logo" src="./logo.jpg">
         <div class="search-container">
         <input type="text" id="userinput" name="userinput" placeholder="Search for a video" required>
         <button class="search-button" type="submit">Search</button>
